--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
             }
         }
     </style>
+    <script>
+        // Перевіряємо, чи це мобільний пристрій
+        function isMobileDevice() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
+
+        // При завантаженні сторінки
+        window.onload = function() {
+            // Якщо це мобільний пристрій, відразу перенаправляємо на мобільну версію
+            if (isMobileDevice()) {
+                window.location.href = 'mobile.html';
+            }
+        }
+    </script>
 </head>
 <body>
     <h1>Платформер</h1>
