--- a/mobile.html
+++ b/mobile.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Платформер - Мобільна версія</title>
-    
+
     <script src="./js/phaser.min.js"></script>
     <script type="module" src="./js/main.js"></script>
 
@@ -67,7 +68,8 @@
             transform: scale(1.05);
         }
 
-        .portrait-message, .landscape-message {
+        .portrait-message,
+        .landscape-message {
             position: fixed;
             top: 50%;
             left: 50%;
@@ -84,9 +86,11 @@
             .portrait-message {
                 display: block;
             }
+
             .landscape-message {
                 display: none;
             }
+
             #game {
                 display: none;
             }
@@ -96,25 +100,45 @@
             .portrait-message {
                 display: none;
             }
+
             .landscape-message {
                 display: none;
             }
+
             #game {
                 display: block;
             }
         }
     </style>
 </head>
+
 <body>
     <div id="game"></div>
     <div class="portrait-message">
         Будь ласка, поверніть пристрій горизонтально для кращого ігрового досвіду
         <svg class="rotate-icon" viewBox="0 0 24 24" fill="white" width="64" height="64">
-            <path d="M16.48 2.52c3.27 1.55 5.61 4.72 5.97 8.48h1.5C23.44 4.84 18.29 0 12 0l-.66.03 3.81 3.81 1.33-1.32zm-6.25-.77c-.59-.59-1.54-.59-2.12 0L1.75 8.11c-.59.59-.59 1.54 0 2.12l12.02 12.02c.59.59 1.54.59 2.12 0l6.36-6.36c.59-.59.59-1.54 0-2.12L10.23 1.75zm4.6 19.44L2.81 9.17l6.36-6.36 12.02 12.02-6.36 6.36zm-7.31.29C4.25 19.94 1.91 16.76 1.55 13H.05C.56 19.16 5.71 24 12 24l.66-.03-3.81-3.81-1.33 1.32z"/>
+            <path
+                d="M16.48 2.52c3.27 1.55 5.61 4.72 5.97 8.48h1.5C23.44 4.84 18.29 0 12 0l-.66.03 3.81 3.81 1.33-1.32zm-6.25-.77c-.59-.59-1.54-.59-2.12 0L1.75 8.11c-.59.59-.59 1.54 0 2.12l12.02 12.02c.59.59 1.54.59 2.12 0l6.36-6.36c.59-.59.59-1.54 0-2.12L10.23 1.75zm4.6 19.44L2.81 9.17l6.36-6.36 12.02 12.02-6.36 6.36zm-7.31.29C4.25 19.94 1.91 16.76 1.55 13H.05C.56 19.16 5.71 24 12 24l.66-.03-3.81-3.81-1.33 1.32z" />
         </svg>
     </div>
-    <!-- <div class="controls">
-        <a href="index.html" class="back-button">Повернутися на головну</a>
-    </div> -->
+    <div class="controls">
+        <a href="index.html" class="back-button">🌠</a>
+        <button id="fullscreen-button" class="fullscreen-button">🏴‍☠️</button>
+    </div>
+    <script>
+        function toggleFullScreen() {
+            const gameContainer = document.documentElement
+            if (!document.fullscreenElement) {
+                if (gameContainer.requestFullscreen) {
+                    gameContainer.requestFullscreen()
+                    document.getElementById("fullscreen-button").textContent = "-🏴‍☠️-"
+                }
+            }
+        } 
+        document.addEventListener("DOMContentLoaded", function () {
+            toggleFullScreen()
+        })
+    </script>
 </body>
+
 </html>
